<resources>
    <string name="app_name">NewApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="hint_full_name">Full Name</string>
    <string name="button_signup">Sign Up</string>
    <string name="text_already_have_account">Already have an account? Login</string>
    <string name="text_dont_have_account">Don\'t have an account? Sign Up</string>
</resources>